[build-system]
build-backend = "flit_scm:buildapi"
requires = ["flit_core>=3.2", "flit_scm", "wheel"]

[project]
name = "avrotize"
dynamic = ["version"]
authors = [
    { name = "Clemens Vasters", email = "clemensv@microsoft.com"}
]
description = "Tools to convert from and to Avro Schema from various other schema languages."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "jsonschema>=4.17.3",
    "lark>=1.1.9",
    "pyarrow>=15.0.0",
    "asn1tools>=0.166.0",
    "jsonpointer>=2.4",
    "jsonpath-ng>=1.6.1",
    "jsoncomparison>=1.1.0",
    "requests>=2.31.0"
]
dev-dependencies = [
    "pytest>=7.2.1",
    "fastavro>=1.9.4",
    "xmlschema>=3.0.2",
    "xmlunittest>=0.5.0",
]

[project.scripts]
avrotize = "avrotize.avrotize:main"

[tool.setuptools_scm]
write_to = "avrotize/_version.py"
[tool.poetry.dev-dependencies]
pytest-cov = "^3.0"
