[build-system]
build-backend = "flit_scm:buildapi"
requires = ["flit_core>=3.2", "flit_scm", "wheel"]

[project]
name = "avrotize"
dynamic = ["version"]
authors = [
    { name = "Clemens Vasters", email = "clemensv@microsoft.com"}
]
description = "Tools to convert from and to Avro Schema from various other schema languages."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "jsonschema>=4.17.3",
    "lark>=1.1.9",
    "pyarrow>=15.0.0",
    "asn1tools>=0.166.0",
    "jsonpointer>=2.4",
    "jsonpath-ng>=1.6.1",
    "jsoncomparison>=1.1.0",
    "requests>=2.31.0",
    "azure-kusto-data>=4.4.1",
    "azure-identity>=1.6.0",
    "datapackage>=1.15.4",
    "jinja2>=3.1.4",
    "pyiceberg>=0.6.1",
    "pandas>=2.2.2",
]
[project.optional-dependencies]
dev = [
    "pytest>=7.2.1",
    "fastavro>=1.9.4",
    "xmlschema>=3.0.2",
    "xmlunittest>=0.5.0",
    "pylint>=3.1.0",
    "dataclasses_json>0.6.4",
    "dataclasses>=0.6",
    "pydantic>=2.7.1",
    "avro>=1.11.3",
    "testcontainers>=4.4.1",
    "pymysql>=1.1.0",
    "psycopg2>=2.9.9",
    "pyodbc>=5.1.0",
    "pymongo>=4.7.2",
    "oracledb>=2.2.1",
    "cassandra-driver>=3.29.1",
    "sqlalchemy>=2.0.15"
]

[project.scripts]
avrotize = "avrotize.avrotize:main"

[tool.setuptools_scm]
write_to = "avrotize/_version.py"
[tool.poetry.dev-dependencies]
pytest-cov = "^3.0"
